Starting (well, retaking) Section 4. Going fast as the wind now, shooo shooo

--- a/2_stateoftheart/stateofart.tex
+++ b/2_stateoftheart/stateofart.tex
@@ -6,7 +6,7 @@
 
 \begin{figure*}
     \centering
-    \includegraphics[width=.5\linewidth]{3_stateoftheart/figures/Lieberman_taxonomy.eps}
+    \includegraphics[width=.5\linewidth]{2_stateoftheart/figures/Lieberman_taxonomy.eps}
     \caption{AI Spectrum as depicted in \cite{lieberman_symbolic_nodate}}
     \label{fig:lieberman_tax}
 \end{figure*}
@@ -18,7 +18,7 @@ Opposite to this vision, where the focus is on the input, \cite{loyola-gonzalez_
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{3_stateoftheart/figures/AI_Map.eps}
+    \includegraphics[width=\linewidth]{2_stateoftheart/figures/AI_Map.eps}
     \caption{Map of AI models combining the taxonomy of \cite{corea_ai_2019} with the taxonomy considered in this thesis. Symbolic, statistical and subsymbolic approaches are colour-coded in blue, purple and red respectively. Knowledge-based and computational intelligent systems are coded in continuous and non-continuous lines, respectively. Dashed lines depict deep learning approaches, while dotted lines depict other computational intelligent approaches.}
     \label{fig:ai_map}
 \end{figure}
@@ -70,7 +70,7 @@ After combining the taxonomies presented in \cite{hopgood_2009_knowledge-based} 
 %%Nuestra taxonomia y cuales son cada uno 
 
 % \section{Design Methods for Hybrid Learning Systems}
-\section{Neurosymbolic Systems}
+\section{Neurosymbolic Systems} \label{sec:sota_neurosymbolic_systems}
 \textit{Neurosymbolic} (or hybrid learning) AI describes a set of proposed methods designed to integrate analogous AI models, generating new approaches that combine the benefits of both models under a unified framework. As \cite{valiant_three_2003} claimed: \textit{"The aim is to identify a way of looking at and manipulating commonsense knowledge that is consistent with and can support what we consider to be the two most fundamental aspects of intelligent cognitive behaviour: the ability to learn from experience and the ability to reason from what has been learned"}. Several efforts have been conducted on this direction, proposing strategies, categorizations, and studying the limitations of this integration. 
 
 \subsection{Motivation}
@@ -139,7 +139,7 @@ All proposals used the KB when building the predictive model, thus successfully 
 
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{3_stateoftheart/figures/Neurosymbolic_Bader.eps}
+    \includegraphics[width=\linewidth]{2_stateoftheart/figures/Neurosymbolic_Bader.eps}
     \caption{Neurosymbolic learning cycle. Extracted from \cite{bader_dimensions_2005}}
     \label{fig:neuro_cycle}
 \end{figure}
@@ -158,7 +158,7 @@ With the renewed interest in neurosymbolic computing, new proposals have emerged
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=.9\linewidth]{3_stateoftheart/figures/garcez_design.eps}
+    \includegraphics[width=.9\linewidth]{2_stateoftheart/figures/garcez_design.eps}
     \caption{Design dimensions proposed by \cite{garcez_neural-symbolic_2019}}
     \label{fig:garcez_design}
 \end{figure}
@@ -177,18 +177,12 @@ Some works focus on the visual representation of neurosymbolic systems via desig
 \subsection{Categorization}
 The neurosymbolic classification framework proposed by \cite{medsker2020models} is one of the first efforts of categorizing neurosymbolic hybrid models under a unified framework. Five integration strategies are defined from a practical point of view based on the interaction degree, from fully independent to fully integrated: stand-alone, transformational, loose coupling, tight coupling, and fully integrated. This categorization does not model the input and output representations employed by each category, as well as the order in which the symbolic and connectionist modules are arranged.
 
-\begin{figure}[t]
-    \centering
-    \includegraphics[width=\linewidth]{3_stateoftheart/figures/Hilario_categorization.eps}
-    \caption{Synoptic view of neural, symbolic and neurosymbolic approaches. Extracted from \cite{hilario_overview_nodate}}
-    \label{fig:hilario_categorization}
-\end{figure}
 
-\cite{hilario_overview_nodate} proposed a finer-grained categorization for neurosymbolic models, as depicted in Figure \ref{fig:hilario_categorization}. This work posed a distinction between the two main strategies of neurosymbolic integration: unification and hybridation. Unified systems are built on the idea that symbolic structures and processes are not strictly required and can emerge from their neural counterparts. On the contrary, hybrid systems are based on the synergistic combination of neural and symbolic models, leading to systems with enhanced cognitive and computational capabilities. Amongst the unified systems, \cite{hilario_overview_nodate} distinguishes between \textit{neuronal symbol processing} (NSP) and \textit{connectionist symbol processing} (CSP). While NSP aims to model the brain's high level functions emulating the behaviour of a real biological neuron, CSP is built for a specific task, commonly using artificial neural networks. Regarding hybrid strategies, they can be further categorized in functional and translational. Translational hybrids serve as a bridging element between unified models and functional hybrids, using symbolic structures with connectionist processors, but removing the need for a symbolic processor. Functional hybrids comprise complete symbolic and connectionist elements, combining neural networks with both symbolic structures and their processing elements. They can further be divided into loose and tight according to the degree of coupling between the symbolic and connectionist processors. 
+\cite{hilario_overview_nodate} proposed a finer-grained categorization for neurosymbolic models. This work posed a distinction between the two main strategies of neurosymbolic integration: unification and hybridation. Unified systems are built on the idea that symbolic structures and processes are not strictly required and can emerge from their neural counterparts. On the contrary, hybrid systems are based on the synergistic combination of neural and symbolic models, leading to systems with enhanced cognitive and computational capabilities. Amongst the unified systems, \cite{hilario_overview_nodate} distinguishes between \textit{neuronal symbol processing} (NSP) and \textit{connectionist symbol processing} (CSP). While NSP aims to model the brain's high level functions emulating the behaviour of a real biological neuron, CSP is built for a specific task, commonly using artificial neural networks. Regarding hybrid strategies, they can be further categorized in functional and translational. Translational hybrids serve as a bridging element between unified models and functional hybrids, using symbolic structures with connectionist processors, but removing the need for a symbolic processor. Functional hybrids comprise complete symbolic and connectionist elements, combining neural networks with both symbolic structures and their processing elements. They can further be divided into loose and tight according to the degree of coupling between the symbolic and connectionist processors. 
 
 %\begin{figure}
 %    \centering
-%    \includegraphics[width=\linewidth]{3_stateoftheart/figures/Neurosymbolic_Bader.eps}
+%    \includegraphics[width=\linewidth]{2_stateoftheart/figures/Neurosymbolic_Bader.eps}
 %    \caption{Neural-symbolic learning cycle. Extracted from \cite{bader_dimensions_2005}}
 %    \label{fig:bader_neurosymbolic}
 %\end{figure}
@@ -204,25 +198,25 @@ The categorization by \cite{hilario_overview_nodate} was later updated by \cite{
 This conception of neurosymbolic integration enables a higher degree of flexibility than the previous categorizations. Subsequently, the categorization proposed by \cite{bader_dimensions_2005} provides a three-dimensional space, where each dimension has different degrees of flexibility. The categorization proposed in \cite{hilario_overview_nodate}, where models range from unified to translational, is treated as just one dimension in this categorization. This dimension is referred to as \textit{interrelation} in this categorization. The second dimension refers to the \textit{language}, which relates to the way in which the knowledge is encoded in the system. The third and final dimension encodes the \textit{usage} of the system.
 
 %%Patrones de diseño con boxologia
-\section{Deep Learning and Knowledge-Based Systems Integration} \label{sec:dl_kb_intregration_rw}
+\section{Introductory Integration of Deep Learning and Knowledge-Based Systems}  \label{sec:sota_dl_kb_intregration}
 
-As discussed in the previous Section, several strategies can be followed regarding neurosymbolic system design. All these strategies, however, can be grouped in two main trends: integration and extraction. Integration approaches aim to combine symbolic and subsymbolic models under a unified framework to perform a certain task. In \cite{van_bekkum_modular_2021} several compositional integrative patterns are described, covering an extended set of tasks. 
+As discussed in the previous Section, several strategies can be followed regarding neurosymbolic system design. All these strategies, however, can be grouped in two main trends: introduction and extraction. Introductions approaches aim to combine symbolic and subsymbolic models under a unified framework to perform a certain task. In \cite{van_bekkum_modular_2021} several compositional integrative patterns are described, covering an extended set of tasks. 
 
-Rules and deep learning models is one of the most recurrent combinations in neurosymbolic systems. \cite{hatzilygeroudis_integrated_2010} proposed the concept of the \textit{neurules}, a kind of integrated rules composed by several adaline units. \textit{Neurules} are also capable of successfully integrating external inputs and providing a better generalization. More recently, \cite{daniele_knowledge_2019} proposes Knowledge Enhanced Neural Networks, a neural architecture where prior knowledge is injected in the form of logical clauses. The introduction of rules in the network prevents it from learning contradictory patterns from the training data, making the final system robust to noisy data. This idea is further explored by \cite{roychowdhury_regularizing_2021}, where an architecture-agnostic method is proposed to integrate first-order logic clauses into deep learning models. The inclusion of first-order logic clauses successfully reduces the need of training data required, while simultaneously boosting the final performance of the system. \cite{kursuncu_knowledge_2020} studied a different path, proposing an architecture where knowledge graphs and expert knowledge are integrated within the learning process, alongside with external data. This integration not only enhances the results of the system, but also accelerates its convergence.
+Rules and deep learning models is one of the most recurrent combinations in neurosymbolic systems. \cite{hatzilygeroudis_integrated_2010} proposed the concept of the \textit{neurules}, a kind of integrated rules composed by several adaline units. \textit{Neurules} are also capable of successfully integrating external inputs and providing a better generalization. More recently, \cite{daniele_knowledge_2019} proposed Knowledge Enhanced Neural Networks, a neural architecture where prior knowledge is injected in the form of logical clauses. The introduction of rules in the network prevents it from learning contradictory patterns from the training data, making the final system robust to noisy data. This idea is further explored by \cite{roychowdhury_regularizing_2021}, where an architecture-agnostic method is proposed to integrate first-order logic clauses into deep learning models. The inclusion of first-order logic clauses successfully reduces the need of training data required, while simultaneously boosting the final performance of the system. \cite{kursuncu_knowledge_2020} studied a different path, proposing an architecture where knowledge graphs and expert knowledge are integrated within the learning process, alongside with external data. This integration not only enhances the results of the system, but also accelerates its convergence.
 
 \begin{figure}[t!]
     \centering
-    \subfigure[Knowledge Graph Embedding \label{fig:van_bekkum_kgc_kge}]{\includegraphics[width=.9\columnwidth]{3_stateoftheart/figures/vanBekkum_LinkPrediction.eps}}
-    \subfigure[Graph Neural Network \label{fig:van_bekkum_kgc_gnn}]{\includegraphics[width=.9\columnwidth]{3_stateoftheart/figures/vanBekkum_GNN.eps}}
-    \caption{Design pattern of two models for Knowledge Graph Completion according to \cite{van_bekkum_modular_2021}}
+    \subfigure[Knowledge Graph Embedding \label{fig:van_bekkum_kgc_kge}]{\includegraphics[width=.9\columnwidth]{2_stateoftheart/figures/vanBekkum_LinkPrediction.eps}}
+    \subfigure[Graph Neural Network \label{fig:van_bekkum_kgc_gnn}]{\includegraphics[width=.9\columnwidth]{2_stateoftheart/figures/vanBekkum_GNN.eps}}
+    \caption{Design pattern of two Knowledge Graph Completion models according to \cite{van_bekkum_modular_2021}}
     \label{fig:van_bekkum_kgc}
 \end{figure}
 
-Knowledge Graph Completion (KGC) \citep{nickel_review_ml_kg_2016,wang_kge_survey_2017} is one of the scenarios comprised in the collection. Knowledge Graphs (KGs) are composed by three elements: a set of entities $\mathcal{E}$, a set of relations $\mathcal{R}$, and the interactions between entities and relations, denoted as \textit{facts} or triples. Facts follow the fixed structure $(s,p,o)$, where $s$ and $o$ are the \textit{subject} and \textit{object} entities respectively, and $p$ is the \textit{predicate} that connects them. KGC aims to mine new facts from the existing KG information. Two main subtasks can be identified within KGC: link prediction and triple classification. In triple classification, the goal is to determine whether a potential fact $(s',p',o')$ is feasible or not. In link prediction, given an incomplete fact $(?,p,o)$ or $(s,p,?)$, the goal is to find the remaining element that maximizes the feasibility of the fact. 
+Knowledge Graph Completion \citep{nickel_review_ml_kg_2016,wang_kge_survey_2017} is one of the main scenarios of neurosymbolic integration. Knowledge Graphs are composed by three elements: a set of entities $\mathcal{E}$, a set of relations $\mathcal{R}$, and the interactions between entities and relations, denoted as \textit{facts} or triples. Facts follow the fixed structure $(s,p,o)$, where $s$ and $o$ are the \textit{subject} and \textit{object} entities respectively, and $p$ is the \textit{predicate} that connects them. KGC aims to mine new facts from the existing KG information. Two main subtasks can be identified within KGC: link prediction and triple classification. In triple classification, the goal is to determine whether a potential fact $(s',p',o')$ is feasible or not. In link prediction, given an incomplete fact $(?,p,o)$ or $(s,p,?)$, the goal is to find the remaining element that maximizes the feasibility of the fact. 
 
 Figure \ref{fig:van_bekkum_kgc} depicts the design patterns (according to \cite{van_bekkum_modular_2021}) of the two main approaches for KGC. Figure \ref{fig:van_bekkum_kgc_kge} depicts the general pattern of a Knowledge Graph Embedding model for KGC. These neurosymbolic models follow a straightforward approach, where the symbolic input (KG) is converted into a tensor representation with an embedding operation. This subsymbolic representation can then be used to infer new facts, which can be then decoded back to a symbolic format. Graph Neural Networks (Figure \ref{fig:van_bekkum_kgc_gnn}) can also be used for this purpose. These models require the integration of background semantic knowledge to embed the input KG into a vectorial space. The resulting representations can then be used to train a neural network, which are then used to deduce new facts.
 
-\cite{leake_bringing_2020} explored the integration of case-based reasoning methodology with deep learning techniques. Case-based reasoning is often perceived as an alternative to rule-based systems, the predominant symbolic paradigm of neurosymbolic systems. This integration is motivated by three key challenges existing in deep learning models: i) learning with fewer labeled samples, ii) learning to reason, and iii) learning to plan complex action sequences. These issues have been successfully addressed by case-based reasoning models, thus motivating the integration of both paradigms. Such is the case of the work by \cite{marie_segmentation_2019}, where a CBR model with a Convolutional Neural Network. This proposal presents CBR as a solution to quality data insufficiency, serving as a preprocessing and augmentation mechanism for the network. \cite{lamy_explainable_2019} study the possibility of exploiting CBR models' interpretability to explain the predictions of a deep neural network.
+\cite{leake_bringing_2020} studied the integration of case-based reasoning methodology with deep learning techniques. Case-based reasoning (CBR) is often perceived as an alternative to rule-based systems, the predominant symbolic paradigm of neurosymbolic systems. This integration is motivated by three key challenges existing in deep learning models: i) learning with fewer labeled samples, ii) learning to reason, and iii) learning to plan complex action sequences. These issues have been successfully addressed by case-based reasoning models, thus motivating the integration of both paradigms. Such is the case of the work by \cite{marie_segmentation_2019}, where a CBR model is combined with a Convolutional Neural Network to segment medical images. This proposal presents CBR as a solution to quality data insufficiency, serving as a preprocessing and augmentation mechanism for the network. \cite{lamy_explainable_2019} studied the possibility of exploiting CBR models' interpretability to explain the predictions of a deep neural network.
 
 
 % \section{Deep Learning Enhanced Knowledge-Based Systems}
@@ -235,19 +229,20 @@ Figure \ref{fig:van_bekkum_kgc} depicts the design patterns (according to \cite{
 %%Extraido from neurosymbolic AI 3rd wave
 %%%Despite the impressive results, deep learning has been criticised for brittleness (being susceptible to adversarial attacks), lack of explainability (not having a formally defined computational semantics or even intuitive explanation, leading to questions around the trustworthiness of AI systems), and lack of parsimony (requiring far too much data, computational power at training time or unacceptable levels of energy consumption)
 
-\section{Knowledge Extraction from Deep Learning Models}
+\section{Knowledge Extraction from Deep Learning Models} \label{sec:sota_knowledge_extraction_dl}
 % %%Same same
-Opposite to integration, extraction describes hybrid approaches where one of the models is used to mine specific knowledge from the other. This is well exemplified in ontology learning \citep{Bouraoui_Jameel_Schockaert_2017,wong_ontology_2012,asim_ontology_2018}. Figure \ref{fig:van_bekkum_onto_learning} depicts the general ontology learning process, where one model is trained to predict a set of relations from a text guided by an auxiliary statistical model. The set of mined relations serves as the input for a second model, which generates a taxonomy of from the input relations with the assistance of an external semantic model. 
+Opposite to integration, extraction describes hybrid approaches where one of the models is used to mine specific knowledge from the other. This is well exemplified in ontology learning \citep{Bouraoui_Jameel_Schockaert_2017,wong_ontology_2012,asim_ontology_2018}. Figure \ref{fig:van_bekkum_onto_learning} depicts the general ontology learning process, where one model is trained to predict a set of relations from a text guided by an auxiliary statistical model. The set of mined relations serves as the input for a second model, which generates a taxonomy from the input relations with the assistance of an external semantic model. 
 
 \begin{figure}[t!]
     \centering
-    \subfigure[Ontology Learning \label{fig:van_bekkum_onto_learning}]{\includegraphics[width=.9\columnwidth]{3_stateoftheart/figures/VanBekkum_OntologyLearning.eps}}
-    \subfigure[Instance-based Explaination \label{fig:van_bekkum_explain}]{\includegraphics[width=.9\columnwidth]{3_stateoftheart/figures/VanBekkum_Explainability.eps}}
+    \subfigure[Ontology Learning \label{fig:van_bekkum_onto_learning}]{\includegraphics[width=.9\columnwidth]{2_stateoftheart/figures/VanBekkum_OntologyLearning.eps}}
+    \subfigure[Instance-based Explaination \label{fig:van_bekkum_explain}]{\includegraphics[width=.9\columnwidth]{2_stateoftheart/figures/VanBekkum_Explainability.eps}}
     \caption{Design pattern of two knowledge extraction models according to \cite{van_bekkum_modular_2021}}
-    \label{fig:van_bekkum_explain}
+    \label{fig:van_bekkum_explain_complete}
 \end{figure}
 
-Explainable Artificial Intelligence (XAI) is the main area of application of these approaches. As stated in \cite{angelov_explainable_2021}: \textit{"As Artificial Intelligence and Machine Learning (and, especially, Deep Learning) become more wide spread and intertwined with human-centric applications and algorithmic decisions become more consequential to individuals and society, attention has shifted back form accuracy to explainability"}. \cite{burkart_survey_2021} provides a set of reasons why AI models should be explainable, namely: \textit{trust, causality, transferability, informativeness, fair and ethical decision making, accountability, adjustment-making} and \textit{proxy functionality}. 
+Explainable Artificial Intelligence (XAI) is the main area of application of these approaches. As stated in \cite{angelov_explainable_2021}: \textit{"As Artificial Intelligence and Machine Learning (and, especially, Deep Learning) become more wide spread and intertwined with human-centric applications, and algorithmic decisions become more consequential to individuals and society, attention has shifted back from accuracy to explainability"}. This is further evidenced by the results obtained in \cite{amador_systematic_review_2019}, where explainable methods were widely favoured as opposite to more accurate but opaque ones. \cite{burkart_survey_2021} provides a set of reasons why AI models should be explainable, namely: \textit{trust, causality, transferability, informativeness, fair and ethical decision making, accountability, adjustment-making} and \textit{proxy functionality}. These features are not inherent to deep learning models, and should therefore be enforced.
+
 While \textit{explainability} is the general term used to describe these approaches, a variety of different terms are employed in the literature. Amongst the existing terms, the following are the most prominent ones, each presenting a different nuance \citep{barredo_arrieta_explainable_2020,adadi_explainability_2018,gilpin_explainability_2018}:
 \begin{itemize}
     \item \textit{Transparency} refers to the capacity of a model to be fully understandable by itself.
@@ -268,14 +263,27 @@ More recently, \cite{phillips_explainability_2021} outlined the \textit{four pri
 \end{itemize}
 
 %%Explainable AI
-Figure \ref{fig:van_bekkum_explain} gives an overview of a general explainability workflow. Two stages can be clearly differentiated in the process: training and deduction phase and explaining phase. The example showcased in Figure \ref{fig:van_bekkum_explain} describes an instance-based explaination model. LIME \cite{ribeiro_lime_2016} and Anchors \cite{Ribeiro_Singh_Guestrin_2018} are examples of such approaches, where the inference process of a single prediction made by a supervised classifier is explained by means of the predictions achieved by a sample of similar inputs. These approaches served as a cornerstone for newer, more robust and complex explainability frameworks, such as \cite{arya_one_2019}. 
+Figure \ref{fig:van_bekkum_explain} gives an overview of a general explainability workflow. Two stages can be clearly differentiated in the process: training and deduction phase and explaining phase. The example showcased in Figure \ref{fig:van_bekkum_explain} describes an instance-based explaination model. LIME \citep{ribeiro_lime_2016} and Anchors \citep{Ribeiro_Singh_Guestrin_2018} are examples of such approaches, where the inference process of a single prediction made by a supervised classifier is explained by means of the predictions achieved by a sample of similar inputs. These approaches serve as a cornerstone for newer, more robust, and complex explainability frameworks, such as \cite{arya_one_2019}. 
 
-While most explainability approaches focus on explaining neural network predictions, this trend is further expanding to different areas, such as KGC. Bianchi et al. \citep{bianchi_kge_explainability_2020} provided an study about explainability in knowledge graph embedding models. In the context of knowledge graph embeddings, explainability encompasses any potential information that can accurately relate the prediction provided by the model with both the input data and the final embeddings. Considering this definition, DistMult \citep{distmult} was one of the first proposals that tackled explainability over KGE. In addition to the KGE model proposal, DistMult also provides a method for the generation of Horn clauses from the embeddings. According to the authors, extracting rules from the embeddings serves four purposes: i) deducing new facts, ii) optimizing data storage, iii) support complex reasoning and iv) provide an explanation for the inference process. Moreover, this work introduced a new perspective on rule mining from KGs: use the embeddings as the source instead of the KG. This approach not only solves one of the main problems of rule mining, which is the optimization of the search space, but also provides a novel, data-agnostic vision on the subject. 
+While most explainability approaches focus on explaining neural network predictions, this trend is further expanded to different areas, such as KGC. Bianchi et al. \citep{bianchi_kge_explainability_2020} provided an study about explainability in KGE models. In the context of knowledge graph embeddings, explainability encompasses any potential information that can accurately relate the prediction provided by the model with both the input data and the final embeddings. Considering this definition, DistMult \citep{distmult} was one of the first proposals that tackled explainability over KGE. In addition to the KGE model proposal, DistMult also provides a method for the generation of Horn clauses from the embeddings. According to the authors, extracting rules from the embeddings serves four purposes: i) deducing new facts, ii) optimizing data storage, iii) support complex reasoning, and iv) provide an explanation for the inference process. Moreover, this work introduced a new perspective on rule mining from KGs: use the embeddings as the source instead of the KG. This approach not only solves one of the main problems of rule mining, which is the optimization of the search space, but also provides a novel data-agnostic vision on the subject. 
 
-As pointed by Bianchi et al., explainability of knowledge graph embedding models remains a challenge. While the inference process of some specific models can be explained using rules, other approaches such as GNNExplainer \citep{ying_2019_gnnexplainer} and CRIAGE \citep{pezeshkpour_2019_investigating} base the explanation on the detection of the top influential elements on the prediction. 
+As pointed by \cite{bianchi_kge_explainability_2020}, explainability of knowledge graph embedding models remains a challenge. While the inference process of some specific models can be explained using rules, other approaches such as GNNExplainer \citep{ying_2019_gnnexplainer} and CRIAGE \citep{pezeshkpour_2019_investigating} base the explanation on the detection of the top influential elements on the prediction. These approaches follow the same workflow depicted in \ref{fig:van_bekkum_explain}, where instance-based explanations are generated by a module external to the KGE model. 
 
 \section{Conclusions of the State-of-the-Art}
 This chapter first aims to summarize the AI spectrum. Due to the complexity of this task, there is not a unique taxonomy, but several categorizations that stem from different perspectives. One of the simplest categorizations divides the spectrum into two complimentary kinds: symbolic and subsymbolic. This spectrum was further expanded to include an in-between ground: statistical models. A different categorization divides the AI spectrum between knowledge-based and computationally intelligent systems. However, this categorization does not consider deep learning approaches due to their novelty. An integration of both taxonomies including deep learning is presented in this Section, which is used throughout the rest of the document.
 
-Neurosymbolic models are also studied in this Section, providing an overview on the different categorizations and design patterns. An insight on the motivation of these approaches is also provided, studying the benefits of combining symbolic and subsymbolic models under a unified framework. Besides the study on the classification of neurosymbolic systems, several approaches presenting different design criteria are also reviewed and presented. These works are then framed in the context of this thesis, which considers neurosymbolic models from two standpoints: integration and extraction. A summarization of existing approaches for both categories is provided. 
+Neurosymbolic models are also studied in this Section, providing an overview on the different categorizations and design patterns. An insight on the motivation of these approaches is also provided, studying the benefits of combining symbolic and subsymbolic models. After conducting a systematic review of neurosymbolic models in the context of ambient intelligence, the following conclusions were drawn:
+\begin{itemize}
+    \item Neurosymbolic systems should enable the solution of tasks that can not otherwise be solved by a single model.
+    \item The introduction of background knowledge into subsymbolic models enhances the final reasoning capacity of the model.
+    \item Explainable models are preferred to their opaque but accurate counterparts.
+    \item There exists a complimentarity between the benefits and flaws of symbolic and subsymbolic models, i.e.: lack of scalability or limited abstraction capacity.
+\end{itemize}
+
+Existing design criteria for neurosymbolic systems are also briefed in this Section. According to the literature, there is not a consensus on the features these systems should exhibit to be considered as such. Therefore, different strategies are considered, which can mostly be narrowed down to two types: unification, where the symbolic and subsymbolic modules are merged into a single component; and hybridation, where the components are interconnected and act in a cooperative mode. Some works devise hybrid neurosymbolic systems as a continuous learning cycle, where the symbolic and subsymbolic components constantly benefit from each other. More recently, \cite{garcez_neural-symbolic_2019} proposed an extended methodology for neurosymbolic integration according to four dimensions: representation, extraction, reasoning, and learning.
+
+These works are then framed in the context of this thesis, which considers neurosymbolic models from two standpoints: introduction and extraction. In the introductory approach, both models are integrated under a common framework, cooperating together towards the resolution of a task. On the contrary, in extraction approaches, one of the models is used to mine specific knowledge from the other. Introductory approaches are widely explored in the literature, particularly regarding the integration of rule-based systems and deep learning models. Knowledge graph completion is also one of the main focus points of these approaches. 
+
+Regarding extraction, explainable AI is the most prominent field of application. Several research has been conducted in this direction, outlining what a system requires to be considered explainable. While \textit{explainable} is the general term to describe these models, different specific terms are used to describe this eature: \textit{transparent, interpretable, understandable} or \textit{comprehensible}. 
+
 \elvitodo{No sé si es buena idea o no, de cara a la legibilidad, añadir aquí las limitaciones. Por coherencia y por separar el contenido original del propio, quizás sea mejor añadirlo como una sección al inicio del próximo capítulo}
