--- a/Thesis.tex
+++ b/Thesis.tex
@@ -576,11 +576,11 @@ EL PRESIDENTE \hspace{30mm} VOCAL 1 \hspace{30mm} VOCAL 2
 
 %\input{2_theoreticalbackground/theoreticalbackground}
 
-\input{3_stateoftheart/stateofart}
+\input{2_stateoftheart/stateofart}
 
-%\input{3_objectives/objectives}
+\input{3_objectives/objectives}
 
-%\input{4_kbsintegrationdl/kbsintegrationdl}
+\input{4_kbsintegrationdl/kbsintegrationdl}
 
 %\input{5_dlintegrationkbs/dlintegrationkbs}
 
