--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -3205,8 +3205,8 @@ keywords = {Agent-based modelling, Customer behaviours, Purchase intention, Stor
 }
 
 @article{boxologyfrank,
-  author    = {Frank van Harmelen and
-               Annette ten Teije},
+  author    = {Frank Van Harmelen and
+               Annette Ten Teije},
   title     = {A Boxology of Design Patterns for Hybrid Learning and Reasoning Systems},
   journal   = {CoRR},
   volume    = {abs/1905.12389},
