--- a/6_kbsextractiondl/kbsextractiondl.tex
+++ b/6_kbsextractiondl/kbsextractiondl.tex
@@ -1,6 +1,6 @@
 \chapter{Knowledge Extraction from Deep Learning Models}
 \label{chap:kbsextractiondl}
-
+%ENLAZAR ESTO CON LOS PRINCIPIOS DE EXPLICABILIDAD DE PHILLIPS ET AL..
 \section{Introduction}
 
 \section{Summary}
